--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,50 +1,41 @@
 <!-- <p id="notice"><%= notice %></p> -->
 
 <div class="ui message">
-  <!-- <div class="header">Notice!</div> -->
   <%= notice %>
 </div>
 
-
-<!--<div id="show">
-  <strong>Name:</strong>
-  <%= @pokemon.name %><br><br>
-
-  <strong>Type/s:</strong>
-  <%= @pokemon.types %><br><br>
-
-  <strong>Abilities:</strong>
-  <%= @pokemon.abilities %><br><br>
-
-  <strong>Description:</strong>
-  <%= @pokemon.description %><br><br>
-</div>
-
-<%= link_to 'Edit', edit_pokemon_path(@pokemon) %> |
-<%= link_to 'Back', pokemons_path %>
--->
 <center>
-	
 <div class="ui card">
         <div class="content">
-
             <div class="header"><%= @pokemon.name %></div>
-
             <div class="ui hidden divider">Type/s</div>
               <%= @pokemon.types %>
-
             <div class="ui hidden divider">Abilities</div>
               <%= @pokemon.abilities %>
-
             <div class="ui hidden divider">Description</div>
               <%= @pokemon.description %>
-        
         </div>
 
         <div class="extra content">
 			<button class="tiny ui button"><%= link_to 'Back', pokemons_path %></button>
             <button class="tiny positive ui button"><%= link_to 'Edit', edit_pokemon_path(@pokemon) %></button>
-            <button class="tiny negative ui button"><%= link_to 'Destroy', @pokemon, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+            <button class="tiny negative ui button"><%= link_to 'Delete', @pokemon, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+        </div>
+
+        <div class="extra content">
+        	Share this Pokemon!<br>
+			<button class="ui circular facebook icon button">
+			  <i class="facebook icon"></i>
+			</button>
+			<button class="ui circular twitter icon button">
+			  <i class="twitter icon"></i>
+			</button>
+			<button class="ui circular instagram icon button">
+			  <i class="instagram icon"></i>
+			</button>
+			<button class="ui circular tumblr icon button">
+			  <i class="tumblr icon"></i>
+			</button>
         </div>
 
 </div>
