--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -6,9 +6,23 @@
 </div>
 
 <br>
-<div class="ui raised padded text inverted container segment">
-  <h1 class="ui header">Pokémon Pokédex</h1>
-  <p id="description">The Pokédex section has a wealth of information on all the Pokémon creatures from the entire game series. On the main list pages you can see the various stats of each Pokémon. Click a Pokémon's name to see a detailed page with Pokédex data, descriptions from previous games, sprites, evolutions, moves and more!</p> 
+<div class="pusher">
+  <div class="ui very padded inverted vertical masthead center aligned segment">
+
+  <div class="ui text container">
+  <h1 class="ui inverted">Pokémon Pokédex</h1>
+  <p id="description">The Pokédex section has a wealth of information on all the Pokémon creatures from the entire game series. On the main list pages you can see the various stats of each Pokémon. Click a Pokémon's name to see a detailed page with Pokédex data, descriptions from previous games, sprites, evolutions, moves and more!</p>
+
+  <p id="description">Lorem ipsum keme keme keme 48 years ang bigalou at bakit wiz biway sa ang at nang at ang jutay mahogany 48 years shogal nang ganda lang majonders shogal kabog tungril ugmas borta at bakit tungril kasi lorem ipsum keme keme pamin mabaho lorem ipsum keme keme.</p> 
+  </div>
+
+      <br>
+      <button class="ui tiny gray button">
+      <%= link_to 'New Pokemon', new_pokemon_path %><br>
+      </button>      
+    </div>
+    </div>
+</div>
 </div>
 
 <br><br>
@@ -17,23 +31,18 @@
   <div class="column">
     <div class="ui card">
         <div class="content">
-
             <div class="header"><%= link_to pokemon.name, pokemon %></div>
-
             <div class="ui hidden divider">Type/s</div>
               <%= pokemon.types %>
-
             <div class="ui hidden divider">Abilities</div>
               <%= pokemon.abilities %>
-
             <div class="ui hidden divider">Description</div>
               <%= pokemon.description %>
-        
         </div>
 
         <div class="extra content">
             <button class="tiny positive ui button"><%= link_to 'Edit', edit_pokemon_path(pokemon) %></button>
-            <button class="tiny negative ui button"><%= link_to 'Destroy', pokemon, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+            <button class="tiny negative ui button"><%= link_to 'Delete', pokemon, method: :delete, data: { confirm: 'Are you sure?' } %></button>
         </div>
 
     </div>
@@ -42,6 +51,3 @@
 </div>
 
 <br><br>
-<button class="ui black button">
-  <%= link_to 'New Pokemon', new_pokemon_path %><br>
-</button>
