--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Pokédex</title>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -17,14 +19,26 @@
 </head>
 
 <body>
-<!-- 	<style>
-	body {
-	    background-image: url("footer_lodyas.png");
-	    background-repeat: repeat-y;
-	}
-	</style> -->
-<!-- <div class="enjoy-css"></div> -->
 	<%= yield %>
+<!-- 	<div class="ui inverted vertical footer segment" id="footer">
+	<div class="ui container">
+	  <div class="ui stackable inverted divided equal height stackable grid">
+	    <div class="two wide column">
+	      <h4 class="ui inverted header">About</h4>
+	      <div class="ui inverted link list">
+	        <a href="#" class="item">Pokédex</a>
+	        <a href="#" class="item">Contact Us</a>
+	      </div>
+	    </div>
+
+	    <div class="thirteen wide column">
+	      <h4 class="ui inverted header">Pokémon Pokédex</h4>
+	      <p>The Pokédex section has a wealth of information on all the Pokémon creatures from the entire game series. On the main list pages you can see the various stats of each Pokémon. </p>
+	    </div>
+	  </div>
+	</div>
+	</div> -->
 </body>
+
 
 </html>
