--- a/app/views/pokemons/_footer.html.erb
+++ b/app/views/pokemons/_footer.html.erb
@@ -4,14 +4,15 @@
     <div class="two wide column">
       <h4 class="ui inverted header">About</h4>
       <div class="ui inverted link list">
-        <a href="#" class="item">Pokédex</a>
+        <a href="http://www.pokemon.com/us/pokedex/" class="item">Pokédex</a>
         <a href="#" class="item">Contact Us</a>
+        <a href="http://www.facebook.com/bridgetnoelleee" class="item">Cutie Developer</a>
       </div>
     </div>
 
     <div class="thirteen wide column">
       <h4 class="ui inverted header">Pokémon Pokédex</h4>
-      <p>The Pokédex section has a wealth of information on all the Pokémon creatures from the entire game series. On the main list pages you can see the various stats of each Pokémon. </p>
+      <p>The Pokédex section has a wealth of information on all the Pokémon creatures from the entire game series. On the main list pages you can see the various stats of each Pokémon.<br>All data about Pokémon creatures and the meaning of the Pokédex are lifted from pokemon.com.</p>
     </div>
   </div>
 </div>
