--- a/app/views/pokemons/_form.html.erb
+++ b/app/views/pokemons/_form.html.erb
@@ -44,7 +44,7 @@
 
 <div class="actions">
   <button class="ui button"><%= link_to 'Back', pokemons_path %></button>
-  <button class="ui button" type="submit">Submit</button>
+  <button class="ui primary button" type="submit">Submit</button>
 </div>
 
 </div>
