--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -20,8 +20,8 @@
 
         <div class="extra content">
 			<button class="tiny ui button"><%= link_to 'Back', pokemons_path %></button>
-            <button class="tiny positive ui button"><%= link_to 'Edit', edit_pokemon_path(@pokemon) %></button>
-            <button class="tiny negative ui button"><%= link_to 'Delete', @pokemon, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+            <button class="tiny positive ui button"><%= link_to 'Edit', edit_pokemon_path(@pokemon), :style => "color: #fff !important" %></button>
+            <button class="tiny negative ui button"><%= link_to 'Delete', @pokemon, method: :delete, data: { confirm: 'Are you sure?' }, :style => "color: #fff !important" %></button>
         </div>
 
 		<div class="ui mini hidden divider">Share this Pokemon!</div>
